// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Range disabled 1`] = `
.c5 {
  color: #E2E6E3;
  font: 500 10px/12px 'Roboto';
  white-space: nowrap;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline-block;
  margin-top: 4px;
}

.c3 {
  left: 50%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: absolute;
  -webkit-transition: left 0.1s ease;
  transition: left 0.1s ease;
  top: -6px;
  -webkit-transform: translate3d(-50%,0,0);
  -ms-transform: translate3d(-50%,0,0);
  transform: translate3d(-50%,0,0);
  padding: 0 0.5rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c4 {
  -webkit-tap-highlight-color: transparent;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: #fff;
  border-radius: 100%;
  border: 1px solid #1785FB;
  display: inline-block;
  height: 12px;
  outline: none;
  -webkit-transition: -webkit-transform 0.1s ease;
  -webkit-transition: transform 0.1s ease;
  transition: transform 0.1s ease;
  width: 12px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background: #F5F5F5;
  border: 1px solid #E2E6E3;
}

.c4:hover {
  -webkit-transform: scale(1.3);
  -ms-transform: scale(1.3);
  transform: scale(1.3);
}

.c4:hover {
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
}

.c1 {
  background: #E2E6E3;
  border-radius: 3px;
  cursor: pointer;
  height: 2px;
  position: relative;
  -webkit-tap-highlight-color: transparent;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background: #E2E6E3;
  cursor: not-allowed;
}

.c2 {
  background: #E2E6E3;
  border-radius: 3px;
  cursor: pointer;
  height: 2px;
  position: relative;
  -webkit-tap-highlight-color: transparent;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background: #E2E6E3;
  cursor: not-allowed;
  background: #1785FB;
  -webkit-transition: left 0.1s ease,width 0.1s ease;
  transition: left 0.1s ease,width 0.1s ease;
  -webkit-tap-highlight-color: transparent;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  left: 0%;
  width: 50%;
  background: #D1D5D7;
}

.c0 {
  position: relative;
  padding: 8px 0 24px;
}

<div
  className="c0"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
>
  <div
    className="c1"
    disabled={true}
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="c2"
      disabled={true}
      width="50%"
    />
    <div
      className="c3"
      disabled={true}
      draggable={undefined}
      onMouseDown={[Function]}
      onTouchMove={[Function]}
    >
      <span
        className="c4"
        disabled={true}
        tabIndex="0"
      />
      <span
        className="c5"
        disabled={true}
      >
        20
      </span>
    </div>
  </div>
</div>
`;

exports[`Range maxValue 1`] = `
.c5 {
  color: #2C2C2C;
  font: 500 10px/12px 'Roboto';
  white-space: nowrap;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline-block;
  margin-top: 4px;
}

.c3 {
  left: 0%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: absolute;
  -webkit-transition: left 0.1s ease;
  transition: left 0.1s ease;
  top: -6px;
  -webkit-transform: translate3d(-50%,0,0);
  -ms-transform: translate3d(-50%,0,0);
  transform: translate3d(-50%,0,0);
  padding: 0 0.5rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c4 {
  -webkit-tap-highlight-color: transparent;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: #fff;
  border-radius: 100%;
  border: 1px solid #1785FB;
  display: inline-block;
  height: 12px;
  outline: none;
  -webkit-transition: -webkit-transform 0.1s ease;
  -webkit-transition: transform 0.1s ease;
  transition: transform 0.1s ease;
  width: 12px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c4:hover {
  -webkit-transform: scale(1.3);
  -ms-transform: scale(1.3);
  transform: scale(1.3);
}

.c1 {
  background: #E2E6E3;
  border-radius: 3px;
  cursor: pointer;
  height: 2px;
  position: relative;
  -webkit-tap-highlight-color: transparent;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c2 {
  background: #E2E6E3;
  border-radius: 3px;
  cursor: pointer;
  height: 2px;
  position: relative;
  -webkit-tap-highlight-color: transparent;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background: #1785FB;
  -webkit-transition: left 0.1s ease,width 0.1s ease;
  transition: left 0.1s ease,width 0.1s ease;
  -webkit-tap-highlight-color: transparent;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  left: 0%;
  width: 0%;
}

.c0 {
  position: relative;
  padding: 8px 0 24px;
}

<div
  className="c0"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
>
  <div
    className="c1"
    disabled={false}
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="c2"
      disabled={false}
      width="0%"
    />
    <div
      className="c3"
      disabled={false}
      draggable={undefined}
      onMouseDown={[Function]}
      onTouchMove={[Function]}
    >
      <span
        className="c4"
        disabled={false}
        tabIndex="0"
      />
      <span
        className="c5"
        disabled={false}
      >
        0
      </span>
    </div>
  </div>
</div>
`;

exports[`Range minValue 1`] = `
.c5 {
  color: #2C2C2C;
  font: 500 10px/12px 'Roboto';
  white-space: nowrap;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline-block;
  margin-top: 4px;
}

.c3 {
  left: 0%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: absolute;
  -webkit-transition: left 0.1s ease;
  transition: left 0.1s ease;
  top: -6px;
  -webkit-transform: translate3d(-50%,0,0);
  -ms-transform: translate3d(-50%,0,0);
  transform: translate3d(-50%,0,0);
  padding: 0 0.5rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c4 {
  -webkit-tap-highlight-color: transparent;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: #fff;
  border-radius: 100%;
  border: 1px solid #1785FB;
  display: inline-block;
  height: 12px;
  outline: none;
  -webkit-transition: -webkit-transform 0.1s ease;
  -webkit-transition: transform 0.1s ease;
  transition: transform 0.1s ease;
  width: 12px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c4:hover {
  -webkit-transform: scale(1.3);
  -ms-transform: scale(1.3);
  transform: scale(1.3);
}

.c1 {
  background: #E2E6E3;
  border-radius: 3px;
  cursor: pointer;
  height: 2px;
  position: relative;
  -webkit-tap-highlight-color: transparent;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c2 {
  background: #E2E6E3;
  border-radius: 3px;
  cursor: pointer;
  height: 2px;
  position: relative;
  -webkit-tap-highlight-color: transparent;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background: #1785FB;
  -webkit-transition: left 0.1s ease,width 0.1s ease;
  transition: left 0.1s ease,width 0.1s ease;
  -webkit-tap-highlight-color: transparent;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  left: 0%;
  width: 0%;
}

.c0 {
  position: relative;
  padding: 8px 0 24px;
}

<div
  className="c0"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
>
  <div
    className="c1"
    disabled={false}
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="c2"
      disabled={false}
      width="0%"
    />
    <div
      className="c3"
      disabled={false}
      draggable={undefined}
      onMouseDown={[Function]}
      onTouchMove={[Function]}
    >
      <span
        className="c4"
        disabled={false}
        tabIndex="0"
      />
      <span
        className="c5"
        disabled={false}
      >
        10
      </span>
    </div>
  </div>
</div>
`;

exports[`Range renders without crashing 1`] = `
.c5 {
  color: #2C2C2C;
  font: 500 10px/12px 'Roboto';
  white-space: nowrap;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline-block;
  margin-top: 4px;
}

.c3 {
  left: 0%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: absolute;
  -webkit-transition: left 0.1s ease;
  transition: left 0.1s ease;
  top: -6px;
  -webkit-transform: translate3d(-50%,0,0);
  -ms-transform: translate3d(-50%,0,0);
  transform: translate3d(-50%,0,0);
  padding: 0 0.5rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c4 {
  -webkit-tap-highlight-color: transparent;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: #fff;
  border-radius: 100%;
  border: 1px solid #1785FB;
  display: inline-block;
  height: 12px;
  outline: none;
  -webkit-transition: -webkit-transform 0.1s ease;
  -webkit-transition: transform 0.1s ease;
  transition: transform 0.1s ease;
  width: 12px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c4:hover {
  -webkit-transform: scale(1.3);
  -ms-transform: scale(1.3);
  transform: scale(1.3);
}

.c1 {
  background: #E2E6E3;
  border-radius: 3px;
  cursor: pointer;
  height: 2px;
  position: relative;
  -webkit-tap-highlight-color: transparent;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c2 {
  background: #E2E6E3;
  border-radius: 3px;
  cursor: pointer;
  height: 2px;
  position: relative;
  -webkit-tap-highlight-color: transparent;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background: #1785FB;
  -webkit-transition: left 0.1s ease,width 0.1s ease;
  transition: left 0.1s ease,width 0.1s ease;
  -webkit-tap-highlight-color: transparent;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  left: 0%;
  width: 0%;
}

.c0 {
  position: relative;
  padding: 8px 0 24px;
}

<div
  className="c0"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
>
  <div
    className="c1"
    disabled={false}
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="c2"
      disabled={false}
      width="0%"
    />
    <div
      className="c3"
      disabled={false}
      draggable={undefined}
      onMouseDown={[Function]}
      onTouchMove={[Function]}
    >
      <span
        className="c4"
        disabled={false}
        tabIndex="0"
      />
      <span
        className="c5"
        disabled={false}
      >
        0
      </span>
    </div>
  </div>
</div>
`;

exports[`Range value 1`] = `
.c5 {
  color: #2C2C2C;
  font: 500 10px/12px 'Roboto';
  white-space: nowrap;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline-block;
  margin-top: 4px;
}

.c3 {
  left: 50%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: absolute;
  -webkit-transition: left 0.1s ease;
  transition: left 0.1s ease;
  top: -6px;
  -webkit-transform: translate3d(-50%,0,0);
  -ms-transform: translate3d(-50%,0,0);
  transform: translate3d(-50%,0,0);
  padding: 0 0.5rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c4 {
  -webkit-tap-highlight-color: transparent;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: #fff;
  border-radius: 100%;
  border: 1px solid #1785FB;
  display: inline-block;
  height: 12px;
  outline: none;
  -webkit-transition: -webkit-transform 0.1s ease;
  -webkit-transition: transform 0.1s ease;
  transition: transform 0.1s ease;
  width: 12px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c4:hover {
  -webkit-transform: scale(1.3);
  -ms-transform: scale(1.3);
  transform: scale(1.3);
}

.c1 {
  background: #E2E6E3;
  border-radius: 3px;
  cursor: pointer;
  height: 2px;
  position: relative;
  -webkit-tap-highlight-color: transparent;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c2 {
  background: #E2E6E3;
  border-radius: 3px;
  cursor: pointer;
  height: 2px;
  position: relative;
  -webkit-tap-highlight-color: transparent;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background: #1785FB;
  -webkit-transition: left 0.1s ease,width 0.1s ease;
  transition: left 0.1s ease,width 0.1s ease;
  -webkit-tap-highlight-color: transparent;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  left: 0%;
  width: 50%;
}

.c0 {
  position: relative;
  padding: 8px 0 24px;
}

<div
  className="c0"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
>
  <div
    className="c1"
    disabled={false}
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="c2"
      disabled={false}
      width="50%"
    />
    <div
      className="c3"
      disabled={false}
      draggable={undefined}
      onMouseDown={[Function]}
      onTouchMove={[Function]}
    >
      <span
        className="c4"
        disabled={false}
        tabIndex="0"
      />
      <span
        className="c5"
        disabled={false}
      >
        20
      </span>
    </div>
  </div>
</div>
`;
